--- a/jamovi/brawsim.a.yaml
+++ b/jamovi/brawsim.a.yaml
@@ -2289,7 +2289,7 @@ options:
       default: 0.5
 
     - name: meta1rp
-      title: '   r₊'
+      title: '   r̅₊'
       type: Number
       default: 0.3
       
@@ -2342,7 +2342,7 @@ options:
       type: Action
 
     - name: meta2rp
-      title: '   r₊'
+      title: '   r̅₊'
       type: Number
       default: 0.3
 
@@ -2381,6 +2381,11 @@ options:
       type: Number
       default: 0.5
 
+    - name: metaCheatingProportion
+      title: ' '
+      type: Number
+      default: 0.05
+      
     - name: meta2Cheating
       title: Cheating
       type: List
@@ -2393,7 +2398,7 @@ options:
          title: Prune
        - name: Replace
          title: Replace
-      default: Grow
+      default: Replace
 
     - name: doMeta3ABtn
       title: '1'
@@ -2436,7 +2441,7 @@ options:
       default: 0.5
 
     - name: meta3rp
-      title: '   r₊'
+      title: '   r̅₊'
       type: Number
       default: 0.3
 
@@ -2468,7 +2473,7 @@ options:
 
 
     - name: meta4SampleSize
-      title: 'sample size' 
+      title: 'original n' 
       type: Number
       default: 42
 
@@ -2493,12 +2498,12 @@ options:
       default: 0.75
 
     - name: meta4rp
-      title: '   r₊'
+      title: '   r̅₊'
       type: Number
       default: 0.3
 
     - name: meta4RepPower
-      title: 'replication power'
+      title: 'replication power wₛ'
       type: Number
       default: 0.9
 
@@ -2551,7 +2556,7 @@ options:
       type: List
       options:
       - name: rse
-        title: rs
+        title: rₛ
       - name: p
         title: p
       default: rse
