extras for metasci

--- a/jamovi/brawsim.a.yaml
+++ b/jamovi/brawsim.a.yaml
@@ -2297,6 +2297,10 @@ options:
       title: '1'
       type: Action
       
+    - name: doMeta0RBtn
+      title: '⤶'
+      type: Action
+      
     - name: doMeta0mBtn
       title: '*'
       type: Action
