--- a/jamovi/brawsim.u.yaml
+++ b/jamovi/brawsim.u.yaml
@@ -2889,6 +2889,18 @@ children:
                                           row: 0
                                           column: 2
                                       - type: Label
+                                        label: Replicate
+                                        cell:
+                                          row: 0
+                                          column: 3
+                                      - type: ActionButton
+                                        name: doMeta2ArBtn
+                                        maxHeight: 24
+                                        margin: none
+                                        cell:
+                                          row: 0
+                                          column: 4
+                                      - type: Label
                                         label: Press here to see multiple samples
                                         cell:
                                           row: 1
@@ -2900,6 +2912,13 @@ children:
                                         cell:
                                           row: 1
                                           column: 2
+                                      - type: ActionButton
+                                        name: doMeta2ArmBtn
+                                        maxHeight: 24
+                                        margin: none
+                                        cell:
+                                          row: 1
+                                          column: 4
                           - type: LayoutBox
                             style: inline
                             children:
@@ -2937,6 +2956,18 @@ children:
                                               row: 0
                                               column: 2
                                           - type: Label
+                                            label: Replicate
+                                            cell:
+                                              row: 0
+                                              column: 3
+                                          - type: ActionButton
+                                            name: doMeta2BrBtn
+                                            maxHeight: 24
+                                            margin: none
+                                            cell:
+                                              row: 0
+                                              column: 4
+                                          - type: Label
                                             label: >-
                                               Press here to see multiple samples
                                               (slow)
@@ -2950,6 +2981,13 @@ children:
                                             cell:
                                               row: 1
                                               column: 2
+                                          - type: ActionButton
+                                            name: doMeta2BrmBtn
+                                            maxHeight: 24
+                                            margin: none
+                                            cell:
+                                              row: 1
+                                              column: 4
                       - type: ActionButton
                         name: meta2Help
                         margin: none
@@ -3024,6 +3062,18 @@ children:
                                               row: 0
                                               column: 2
                                           - type: Label
+                                            label: Replicate
+                                            cell:
+                                              row: 0
+                                              column: 3
+                                          - type: ActionButton
+                                            name: doMeta3ArBtn
+                                            maxHeight: 24
+                                            margin: none
+                                            cell:
+                                              row: 0
+                                              column: 4
+                                          - type: Label
                                             label: Press here to see multiple samples
                                             cell:
                                               row: 1
@@ -3035,6 +3085,13 @@ children:
                                             cell:
                                               row: 1
                                               column: 2
+                                          - type: ActionButton
+                                            name: doMeta3ArmBtn
+                                            maxHeight: 24
+                                            margin: none
+                                            cell:
+                                              row: 1
+                                              column: 4
                           - type: LayoutBox
                             style: inline
                             children:
@@ -3082,6 +3139,18 @@ children:
                                               row: 0
                                               column: 2
                                           - type: Label
+                                            label: Replicate
+                                            cell:
+                                              row: 0
+                                              column: 3
+                                          - type: ActionButton
+                                            name: doMeta3BrBtn
+                                            maxHeight: 24
+                                            margin: none
+                                            cell:
+                                              row: 0
+                                              column: 4
+                                          - type: Label
                                             label: Press here to see multiple sets
                                             cell:
                                               row: 1
@@ -3093,6 +3162,13 @@ children:
                                             cell:
                                               row: 1
                                               column: 2
+                                          - type: ActionButton
+                                            name: doMeta3BrmBtn
+                                            maxHeight: 24
+                                            margin: none
+                                            cell:
+                                              row: 1
+                                              column: 4
                       - type: ActionButton
                         name: meta3Help
                         margin: none
