--- a/old/brawsim.a.yaml
+++ b/old/brawsim.a.yaml
@@ -2321,6 +2321,14 @@ options:
       title: '*'
       type: Action
 
+    - name: doMeta1BrBtn
+      title: '⮐'
+      type: Action
+
+    - name: doMeta1BrmBtn
+      title: '*'
+      type: Action
+
     - name: doMeta0ABtn
       title: '1'
       type: Action
@@ -2345,11 +2353,27 @@ options:
       title: '*'
       type: Action
 
+    - name: doMeta2ArBtn
+      title: '⮐'
+      type: Action
+    
+    - name: doMeta2ArmBtn
+      title: '*'
+      type: Action
+
     - name: doMeta2BBtn
       title: '1'
       type: Action
     
     - name: doMeta2BmBtn
+      title: '*'
+      type: Action
+
+    - name: doMeta2BrBtn
+      title: '⮐'
+      type: Action
+    
+    - name: doMeta2BrmBtn
       title: '*'
       type: Action
 
@@ -2420,11 +2444,27 @@ options:
       title: '*'
       type: Action
 
+    - name: doMeta3ArBtn
+      title: '⮐'
+      type: Action
+    
+    - name: doMeta3ArmBtn
+      title: '*'
+      type: Action
+
     - name: doMeta3BBtn
       title: '1'
       type: Action
 
     - name: doMeta3BmBtn
+      title: '*'
+      type: Action
+
+    - name: doMeta3BrBtn
+      title: '⮐'
+      type: Action
+    
+    - name: doMeta3BrmBtn
       title: '*'
       type: Action
 
@@ -2622,16 +2662,6 @@ options:
       title: "p(rₚ=0):"
       type: Number
       default: 0.5
-      
-    - name: metaPublicationBias
-      title: "publication bias:"
-      type: List
-      options: 
-      - name: no
-        title: no
-      - name: yes
-        title: yes
-      default: no
 
     - name: metaGoBack
       title: '<<'
